--- a/package.json
+++ b/package.json
@@ -23,6 +23,19 @@
     "express": "^4.14.0",
     "mongodb": "^2.2.10",
     "mongoose": "^4.6.1",
-    "pryjs": "^1.0.2"
+    "morgan": "^1.7.0",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
+    "react-router": "^2.8.1"
+  },
+  "devDependencies": {
+    "axios": "^0.14.0",
+    "babel-core": "^6.14.0",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-react": "^6.11.1",
+    "pryjs": "^1.0.2",
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.16.1"
   }
 }
