--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.15.2",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
+    "jquery": "^3.1.1",
     "mongodb": "^2.2.10",
     "mongoose": "^4.6.1",
     "morgan": "^1.7.0",
