--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "customizable adventure app featuring multiple paths and endings",
   "main": "server.js",
   "scripts": {
+    "build": "webpack --config ./webpack.prod.config.js --progress --colors",
+  "start": "node ./index.js",
+  "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
