--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "build": "webpack --config ./webpack.prod.config.js --progress --colors",
-  "start": "node ./index.js",
+  "start": "node ./index.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
