I added the ability for people to redo the story without inputting all values again

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-var DB_USER = process.env.DB_USER;
-var DB_PASS = process.env.DB_PASS;
-var DB_PATH = process.env.DB_PATH;
+DB_USER = ceng
+DB_PASS = d2UOwfqe6TcU
+DB_PATH = ds019648.mlab.com:19648/stories_db
